tests/ui/const-generics/const-param-type-depends-on-type-param-ungated.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-type-param-ungated.rs:3:22
   |
LL | struct B<T, const N: T>(PhantomData<[T; N]>);
   |                      ^ the type must not depend on the parameter `T`
   |
   = note: type parameters may not be used in the type of const parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0770`.
